    - Add package pkg-config. Issue earthworm/ew2openapi#16
    - Use for hew3, hew19 and hew29 the docker image ew-sandbox:a4bb3e30. Issue earthworm/run_configs#155, earthworm/ew2openapi#16, earthworm/ew2openapi#64, earthworm/ew2openapi#65, earthworm/ew2openapi#66, earthworm/ew2openapi#67
    - Some fix to Makefile and Makefile.env

* Release 1.3.5 (2022/03/17)
    - Update Dockerfile with new official Earthworm git repository. https://gitlab.com/seismic-software/earthworm - Issue #13
    - Substitude EW_SVN_BRANCH and EW_SVN_REVISION with new arguments EW_GIT_REP and EW_GIT_REF. Issue #13
    - Add workflow examples of possible actions by Earthworm Docker Sandbox. Issue #9, #14
    - Add docker-compose.yml for running multiple Earthworm instances. Issue #15
    - Add script ew_startstop_trap_pau.sh for gracefully stopping Earthworm by docker-compose.yml Issue #15
    - Organize serveral docker-compose.yml for different Earthworm instances. Issue #15, uf/reperibile#132
    - Set EW_GIT_REF = d230d73e to compile Earthworm with increased MAX_BYTES_PER_EQ value. Issue earthworm/ew2openapi#54, https://gitlab.com/seismic-software/earthworm/-/issues/47
    - Add .gitlab-ci.yml for CI. Issue #16
    - Set EW_GIT_REF = 6382013f to read amplitude values from ARC message (read_arc.h and read_arc.c). Issue earthworm/ew2openapi#25, https://gitlab.com/seismic-software/earthworm/-/issues/47
    - Set .bash_profile to load default Earthworm variables.
    - Hotfix: 1.3.1: start interactive bash to automatically load .bash_profile when run commands. (2022/03/10)
    - Hotfix: 1.3.2: Minor fix. (2022/03/10)
    - Hotfix: 1.3.3: Add DOCKER_OPTS variable. (2022/03/10)
    - Hotfix: 1.3.4: Update ew2openapi. (2022/03/16)
    - Hotfix: 1.3.5: Update and improve compilation for ew2openapi. Issue #16 earthworm/ew2openapi#59 (2022/03/17)

* Release 1.2.7 (2020/12/22)
    - Change variable ARGS to CMD for ew_run_bash, ew_run_screen, ew_exec_bash, ew_exec_screen.