@@ -28,7 +28,8 @@ Release History
     - Use docker image ew-sandbox:d59707fc to fix binder_ew nucleates more events in v7.10. Issue https://gitlab.com/seismic-software/earthworm/-/issues/50, earthworm/run_configs#150, uf/allineamento_configurazioni_acquisizione_localizzazione_db#163, uf/allineamento_configurazioni_acquisizione_localizzazione_db#164, uf/allineamento_configurazioni_acquisizione_localizzazione_db#165, uf/allineamento_configurazioni_acquisizione_localizzazione_db#166, uf/allineamento_configurazioni_acquisizione_localizzazione_db#167, uf/allineamento_configurazioni_acquisizione_localizzazione_db#168
     - Add package pkg-config. Issue earthworm/ew2openapi#16
     - Use for hew3, hew19 and hew29 the docker image ew-sandbox:a4bb3e30. Issue earthworm/run_configs#155, earthworm/ew2openapi#16, earthworm/ew2openapi#64, earthworm/ew2openapi#65, earthworm/ew2openapi#66, earthworm/ew2openapi#67
-    - Some fix to Makefile and Makefile.env
+    - Some fix to Makefile and Makefile.env. Issue #16
+    - Add in Dockerfile test execution for ew2openapi. Issue #16
 
 * Release 1.3.5 (2022/03/17)
     - Update Dockerfile with new official Earthworm git repository. https://gitlab.com/seismic-software/earthworm - Issue #13
